--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "./node_modules/.bin/eslint",
     "check-lint": "lint [0-9]*.js",
     "test": "./node_modules/.bin/mocha --require test/hooks.js --exit",
-    "start": "node ./jobs/processJobs.js & ; node server.js",
+    "start": "./start.sh",
     "dev": "nodemon server.js"
   },
   "keywords": [],
